fix: vyper version

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,1 @@
-VITE_BASE_RPC_URL="https://base.gateway.tenderly.co/2rxG45nqvR8U9T89RFVAHP"
+VITE_BASE_RPC_URL="https://base-mainnet.g.alchemy.com/v2/LMAcADm1MAQGziXyt8rH1"
